--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.5.1"
 
 
+    implementation "com.github.bumptech.glide:glide:3.7.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
