--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
-
+    compileSdkVersion 32
     defaultConfig {
         applicationId "com.example.thecookbook"
         minSdkVersion 19
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
@@ -36,13 +35,16 @@ android {
     buildFeatures {
         dataBinding true
     }
+    lint {
+        abortOnError false
+    }
 }
 
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -55,7 +57,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
 
-    kapt "androidx.lifecycle:lifecycle-compiler:2.5.1"
+    kapt "android.arch.lifecycle:common-java8:1.1.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
