--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.1'
 
     kapt "android.arch.lifecycle:common-java8:1.1.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
