--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
         classpath 'com.google.gms:google-services:4.3.13'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1"
         // NOTE: Do not place your application dependencies here; they belong
